service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: traefik-system
  labels:
    app: traefik
spec:
  ports:
  - port: 9102
    protocol: TCP
    targetPort: 9102
    name: http-metrics
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
